# boardgame-vue-kit

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
context/: DESIGN-DOC.md
examples/drafting/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
examples/drafting/src/: App.vue  index.css  main.ts
frontend/: App.vue  histoire.config.ts  histoire.setup.ts  index.html  main.ts  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
frontend/kit/: index.ts
frontend/kit/canvas/: Stage.story.vue  Stage.vue
frontend/kit/composables/: engine.ts  useTheme.ts
frontend/kit/digital/: Button.story.vue
frontend/kit/physical/: Board.vue  Card.story.vue  Icon.story.vue  Icon.vue  README.md  Token.vue
kit/: histoire.config.ts  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
kit/src/: histoire.setup.ts  index.ts
kit/src/boards/: MultiTrack.story.vue  MultiTrack.vue  Slot.vue  Track.story.vue  Track.vue  Zone.story.vue  Zone.vue
kit/src/canvas/: Layer.story.vue  Layer.vue
kit/src/digital/: Panel.story.vue  Panel.vue
kit/src/layout/: FitText.story.vue  FitText.vue  Scaled.story.vue  Scaled.vue
kit/src/physical/: Board.story.vue  Card.vue  README.md  Slot.story.vue  Slot.vue  Token.story.vue  Zone.story.vue  Zone.vue
kit/src/pieces/: Card.story.vue  Card.vue  CardZone.story.vue  CardZone.vue  Deck.vue  Token.story.vue  Token.vue
kit/src/styles/: playground.css
(+26 files in other folders)
