[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engine"
version = "0.1.0"
description = "Game rules / simulation / analysis package. Rename when you start a project."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine"]
